2012-02-09  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/mw_coms.c ,
 * src/frontend/outitf.c :
   make use of TMALLOC()

2012-02-09  Robert Larice
 * src/main.c ,
 * src/tclspice.c ,
 * src/maths/cmaths/cmath2.c ,
 * src/maths/misc/randnumb.c :
   unuse srandom() and random()

2012-02-08 Francesco Lannutti (Robert Larice)
 * Makefile.am :
   polish make maintainer-clean, make mrproper

2012-02-07  Robert Larice
 * src/include/ngspice/complex.h :
   #4/4 finish the switch from ngcomplex* args to ngcomplex

2012-02-07  Robert Larice
 * src/ngsconvert.c ,
 * src/tclspice.c ,
 * src/ciderlib/support/database.c ,
 * src/frontend/breakp.c ,
 * src/frontend/com_compose.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/diff.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/options.c ,
 * src/frontend/points.c ,
 * src/frontend/postcoms.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/vectors.c ,
 * src/frontend/plotting/agraf.c ,
 * src/frontend/plotting/gnuplot.c ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/plotcurv.c ,
 * src/frontend/plotting/plotit.c ,
 * src/frontend/plotting/xgraph.c ,
 * src/include/ngspice/complex.h ,
 * src/maths/cmaths/cmath1.c ,
 * src/maths/cmaths/cmath2.c ,
 * src/maths/cmaths/cmath3.c ,
 * src/maths/cmaths/cmath4.c ,
 * src/maths/cmaths/test_cx_cph.c ,
 * src/maths/cmaths/test_cx_j.c ,
 * src/maths/cmaths/test_cx_mag.c ,
 * src/maths/cmaths/test_cx_ph.c :
   #3/4 switch realpart() and imagpart() args from ngcomplex* to ngcomplex

2012-02-07  Robert Larice
 * src/frontend/diff.c ,
 * src/include/ngspice/complex.h ,
 * src/maths/cmaths/cmath1.c ,
 * src/maths/cmaths/cmath2.c ,
 * src/maths/cmaths/cmath3.c ,
 * src/maths/cmaths/cmath4.c :
   #2/4 switch cph() and cmag() args from ngcomplex* to ngcomplex

2012-02-07  Robert Larice
 * src/include/ngspice/complex.h :
   #1/4 drop cast (enable compiler type check)

2012-02-07  Holger Vogt / Robert Larice
 * src/tclspice.c :