@@ -102,8 +102,8 @@ DIOsetup(SMPmatrix *matrix, GENmodel *inModel, CKTcircuit *ckt, int *states)
         if(!model->DIOctpGiven) {
             model->DIOctp = 0.0;
         }
-        if(!model->DIOtbpGiven) {
-            model->DIOtbp = 0.0;
+        if(!model->DIOtpbGiven) {
+            model->DIOtpb = 0.0;
         }
         if(!model->DIOtphpGiven) {
             model->DIOtphp = 0.0;
