@@ -132,7 +132,7 @@ DIOtemp(GENmodel *inModel, CKTcircuit *ckt)
                     here->DIOtJctCap *= 1+here->DIOtGradingCoeff*
                             (400e-6*(here->DIOtemp-REFTEMP)-gmanew);
             } else if (model->DIOtlevc == 1) {
-                    here->DIOtJctPot = model->DIOjunctionPot - model->DIOtbp*(here->DIOtemp-REFTEMP);
+                    here->DIOtJctPot = model->DIOjunctionPot - model->DIOtpb*(here->DIOtemp-REFTEMP);
                     here->DIOtJctCap = model->DIOjunctionCap *
                             (model->DIOcta*(here->DIOtemp-REFTEMP));
             }
